When a dialog uses SetTitleView() also use ShouldShowWindowTitle().

For regular title views, BubbleFrameView decides whether to add
title margins based on the preferred height of the title view.

This doesn't work for StyledLabel titles. Generally, the preferred
height of label (styled or otherwise) is not meaningful until the
width is known (due to word wrapping). And knowing the width requires
knowing whether title margins are added. So for fancy titles,
BubbleFrameView would use whether a non-null fancy title was added
at all via SetTitleView(). But that doesn't cater to use-cases that
always set a title view, but sometimes don't want to show it.

To cater for this, use WidgetDelegate::ShouldShowWindowTitle() to
determine whether a title should be hidden, even if a dialog has
called SetTitleView().

Bug: 760663
Change-Id: Ib0feaa6a7408dfdb3ca71f62e6f425abf64ed212
Reviewed-on: https://chromium-review.googlesource.com/644389
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498915}
Former-commit-id: c47591e9c88c52f8e6012a85a5c60000e22471c8