ui/views/bubble/bubble_dialog_delegate_unittest.cc
@@ -19,18 +19,19 @@
 #include "ui/views/test/views_test_base.h"
 #include "ui/views/widget/widget.h"
 #include "ui/views/widget/widget_observer.h"
+#include "ui/views/window/dialog_client_view.h"
 
 namespace views {
 
 namespace {
 
+constexpr int kContentHeight = 200;
+constexpr int kContentWidth = 200;
+
 class TestBubbleDialogDelegateView : public BubbleDialogDelegateView {
  public:
   TestBubbleDialogDelegateView(View* anchor_view)
-      : BubbleDialogDelegateView(anchor_view, BubbleBorder::TOP_LEFT),
-        view_(new View()),
-        title_view_(nullptr),
-        should_show_close_button_(false) {
+      : BubbleDialogDelegateView(anchor_view, BubbleBorder::TOP_LEFT) {
     view_->SetFocusBehavior(FocusBehavior::ALWAYS);
     AddChildView(view_);
   }
@@ -39,7 +40,7 @@ class TestBubbleDialogDelegateView : public BubbleDialogDelegateView {
   // BubbleDialogDelegateView overrides:
   View* GetInitiallyFocusedView() override { return view_; }
   gfx::Size CalculatePreferredSize() const override {
-    return gfx::Size(200, 200);
+    return gfx::Size(kContentWidth, kContentHeight);
   }
   void AddedToWidget() override {
     if (title_view_)
@@ -50,21 +51,36 @@ class TestBubbleDialogDelegateView : public BubbleDialogDelegateView {
     return base::ASCIIToUTF16("TITLE TITLE TITLE");
   }
 
+  bool ShouldShowWindowTitle() const override {
+    return should_show_window_title_;
+  }
+
   bool ShouldShowCloseButton() const override {
     return should_show_close_button_;
   }
 
+  int GetDialogButtons() const override { return buttons_; }
+
   void set_title_view(View* title_view) { title_view_.reset(title_view); }
   void show_close_button() { should_show_close_button_ = true; }
+  void hide_buttons() {
+    should_show_close_button_ = false;
+    buttons_ = ui::DIALOG_BUTTON_NONE;
+  }
+  void set_should_show_window_title(bool should_show_window_title) {
+    should_show_window_title_ = should_show_window_title;
+  }
 
   using BubbleDialogDelegateView::SetAnchorRect;
   using BubbleDialogDelegateView::GetBubbleFrameView;
   using BubbleDialogDelegateView::SizeToContents;
 
  private:
-  View* view_;
+  View* view_ = new View;
   std::unique_ptr<View> title_view_;
-  bool should_show_close_button_;
+  int buttons_ = ui::DIALOG_BUTTON_OK | ui::DIALOG_BUTTON_CANCEL;
+  bool should_show_close_button_ = false;
+  bool should_show_window_title_ = true;
 
   DISALLOW_COPY_AND_ASSIGN(TestBubbleDialogDelegateView);
 };
@@ -360,8 +376,8 @@ TEST_F(BubbleDialogDelegateTest, CustomTitle) {
   std::unique_ptr<Widget> anchor_widget(CreateTestWidget());
   TestBubbleDialogDelegateView* bubble_delegate =
       new TestBubbleDialogDelegateView(anchor_widget->GetContentsView());
-  constexpr int kTitlePreferredHeight = 20;
-  View* title_view = new StaticSizedView(gfx::Size(10, kTitlePreferredHeight));
+  constexpr int kTitleHeight = 20;
+  View* title_view = new StaticSizedView(gfx::Size(10, kTitleHeight));
   bubble_delegate->set_title_view(title_view);
   Widget* bubble_widget =
       BubbleDialogDelegateView::CreateBubble(bubble_delegate);
@@ -373,7 +389,7 @@ TEST_F(BubbleDialogDelegateTest, CustomTitle) {
   EXPECT_EQ(bubble_frame, title_view->parent());
   // Title takes up the whole bubble width when there's no icon or close button.
   EXPECT_EQ(bubble_delegate->width(), title_view->size().width());
-  EXPECT_EQ(kTitlePreferredHeight, title_view->size().height());
+  EXPECT_EQ(kTitleHeight, title_view->size().height());
 
   bubble_delegate->show_close_button();
   bubble_frame->ResetWindowControls();
@@ -384,6 +400,50 @@ TEST_F(BubbleDialogDelegateTest, CustomTitle) {
   EXPECT_EQ(close_button->x() - LayoutProvider::Get()->GetDistanceMetric(
                                     DISTANCE_CLOSE_BUTTON_MARGIN),
             title_view->bounds().right());
+
+  LayoutProvider* provider = LayoutProvider::Get();
+  const gfx::Insets content_margins =
+      provider->GetInsetsMetric(INSETS_DIALOG_CONTENTS);
+  const gfx::Insets title_margins =
+      provider->GetInsetsMetric(INSETS_DIALOG_TITLE);
+  EXPECT_EQ(content_margins, bubble_delegate->margins());
+  // Note there is no title_margins() accessor (it should not be customizable).
+
+  // To perform checks on the precise size, first hide the dialog buttons so the
+  // calculations are simpler (e.g. platform font discrepancies can be ignored).
+  DialogClientView* client_view =
+      static_cast<DialogClientView*>(bubble_widget->client_view());
+  bubble_delegate->hide_buttons();
+  bubble_frame->ResetWindowControls();
+  client_view->UpdateDialogButtons();
+  bubble_delegate->SizeToContents();
+
+  // Use GetContentsBounds() to exclude the bubble border, which can change per
+  // platform.
+  gfx::Rect frame_size = bubble_frame->GetContentsBounds();
+  EXPECT_EQ(content_margins.height() + kContentHeight + title_margins.height() +
+                kTitleHeight,
+            frame_size.height());
+  EXPECT_EQ(content_margins.width() + kContentWidth, frame_size.width());
+
+  // Set the title preferred size to 0. The bubble frame makes fewer assumptions
+  // about custom title views, so there should still be margins for it while the
+  // WidgetDelegate says it should be shown, even if its preferred size is zero.
+  title_view->SetPreferredSize(gfx::Size());
+  bubble_widget->UpdateWindowTitle();
+  bubble_delegate->SizeToContents();
+  frame_size = bubble_frame->GetContentsBounds();
+  EXPECT_EQ(content_margins.height() + kContentHeight + title_margins.height(),
+            frame_size.height());
+  EXPECT_EQ(content_margins.width() + kContentWidth, frame_size.width());
+
+  // Now hide the title properly. The margins should also disappear.
+  bubble_delegate->set_should_show_window_title(false);
+  bubble_widget->UpdateWindowTitle();
+  bubble_delegate->SizeToContents();
+  frame_size = bubble_frame->GetContentsBounds();
+  EXPECT_EQ(content_margins.height() + kContentHeight, frame_size.height());
+  EXPECT_EQ(content_margins.width() + kContentWidth, frame_size.width());
 }
 
 // Ensure the BubbleFrameView correctly resizes when the title is provided by a
